Integrate JARVIS API into Lovable frontend
Embed the backend server and align frontend types and panels for live data, with safer empty states and docs/scripts for local run.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server:dev": "npm --prefix server run dev",
+    "server:start": "npm --prefix server start",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
